tests/cases/compiler-development/artifact/errors/diagnostic-use-after-move.diagnostic
diagnostic error code=O0001 family=ownership message="cannot use moved binding 'token'" sources=1 labels=1 notes=0 helps=0
  Source source_id=0 kind=file path="tests/cases/compiler-development/artifact/errors/diagnostic-use-after-move.ari" display="tests/cases/compiler-development/artifact/errors/diagnostic-use-after-move.ari" bytes=146
  Label index=0 role=primary source_id=0 source="tests/cases/compiler-development/artifact/errors/diagnostic-use-after-move.ari" line=9 column=10 end_line=9 end_column=15 byte_start=137 byte_end=142 message=""
  Snippet label=0 text="  --> tests/cases/compiler-development/artifact/errors/diagnostic-use-after-move.ari:9:10\n   |\n 9 |   return token;\n   |          ^^^^^"
